@@ -1,3 +1,3 @@
 FROM navikt/java:14
-
 COPY target/*.jar app.jar
+ENV JAVA_OPTS --enable-preview
