@@ -46,7 +46,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <release>11</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                    <parameters>true</parameters>
+                    <release>14</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -113,6 +115,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
 
             <plugin>
